--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,9 +74,8 @@ jobs:
     # Upload release asset:   https://github.com/softprops/action-gh-release
     - name: Update release asset
       id: upload-release-asset
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: svenstaro/upload-release-action@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}  # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        files: ${{ env.Compile_Path }}\${{ env.App_Packages_Archive }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ${{ env.Compile_Path }}\${{ env.App_Packages_Archive }}
+        tag: ${{ steps.release-version.outputs.RELEASE_VERSION }}
