--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,11 +71,10 @@ jobs:
       with:
         tag: ${{ steps.release-version.outputs.RELEASE_VERSION }}
 
-    # Upload release asset:   https://github.com/softprops/action-gh-release
+    # Upload release asset
     - name: Update release asset
       id: upload-release-asset
-      uses: svenstaro/upload-release-action@v2
+      uses: Shopify/upload-to-release@v1
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{ env.Compile_Path }}\${{ env.App_Packages_Archive }}
-        tag: ${{ steps.release-version.outputs.RELEASE_VERSION }}
+        path: ${{ env.Compile_Path }}\${{ env.App_Packages_Archive }}
